# Computer-graphics-and-image

./: README.md
ComputerGraphics_HW/HW1/HW1.1/: main.cpp
ComputerGraphics_HW/HW1/HW1.2/: CMakeLists.txt  main.cpp
ComputerGraphics_HW/HW4/: CohenSutherland.cpp  图形学-0328作业.docx
ComputerGraphics_HW/HW5/: HW5_Cardinal.cpp
ComputerGraphics_Lab/lab1/: lab1.sln
ComputerGraphics_Lab/lab1/Debug/: lab1.ilk
ComputerGraphics_Lab/lab1/lab1/: lab1.vcxproj  main.cpp
ComputerGraphics_Lab/lab1/lab1/Debug/: vc141.idb
ComputerGraphics_Lab/lab1/lab1/Debug/lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ComputerGraphics_Lab/lab2/: lab2.sln
ComputerGraphics_Lab/lab2/Debug/: lab2.ilk
ComputerGraphics_Lab/lab2/lab2/: lab2.vcxproj  main.cpp
ComputerGraphics_Lab/lab2/lab2/Debug/: vc141.idb
ComputerGraphics_Lab/lab2/lab2/Debug/lab2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ComputerGraphics_Lab/lab3/: ComputerGraphics_Lab - Shortcut.lnk  lab3.sln
ComputerGraphics_Lab/lab3/lab3/: lab3.vcxproj  lab3.vcxproj.filters  main.cpp
ComputerGraphics_Lab/lab3/lab3/Debug/: vc141.idb
ComputerGraphics_Lab/lab3/lab3/Debug/lab3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab3.lastbuildstate  link.read.1.tlog  (+2 more)
HW1/HW1.1/: CMakeLists.txt  main.cpp
HW1/HW1.2/: glad.c
HW2/: CMakeLists.txt
HW2/HW2/: main.cpp
HW3/: CMakeLists.txt  main.cpp
HW4/: main.cpp
HW5/: HW5_Bezier.cpp
